meego-keyboard (0.5.16~1) unstable; urgency=low

  *[UNRELEASED] 

 -- Gibran Rodriguez <ext-gibran.rodriguez@nokia.com>  Wed, 01 Dec 2010 11:28:37 +0200

meego-keyboard (0.5.15-1) unstable; urgency=low

  * Changes: Catch up with meegotouch-inputmethodengine update on Version 0.4 .
  * Changes: use cursor position to locate wordtracker.
  * Fixes: NB#206444 - Strange behavior of Smiley Picker and Done/Send buttons in Conversational View
  * Fixes: NB#204964 - Toolbar button label is truncated in portrait mode

 -- Gibran Rodriguez <ext-gibran.rodriguez@nokia.com>  Wed, 01 Dec 2010 11:19:06 +0200

meego-keyboard (0.5.14-1) unstable; urgency=low

  * Fixes: NB#204084 - Some characters missing from HWKB mode
  * Fixes: NB#187296 - Nothing is happening when trying to enter number char by long pressing from HKB in the number text field.
  * Fixes: NB#204828 - With HWKB, two characters get inserted when slipping fast/moderate character + enter key on multi-line text edit

 -- huaming wang <huaming.wang@nokia.com>  Fri, 26 Nov 2010 12:34:27 +0200

meego-keyboard (0.5.13-1) unstable; urgency=low

  * Implemented: SWP#TINME-1153 Implement support to show cursor in pre-edit

 -- huaming wang <huaming.wang@nokia.com>  Wed, 24 Nov 2010 11:53:43 +0200

meego-keyboard (0.5.12-1) unstable; urgency=low

  * Fixes: NB#204452
  * Fixes: NB#202563 - HW key navigation fails in phone dialer while entering numbers
  * Fixes: NB#185293 - Ctrl related keys are not working in the number field and the phone application
  * Implemented: SWP#TINME-1169 Hardware keyboard "text copied to clipboard" notification

 -- huaming wang <huaming.wang@nokia.com>  Tue, 23 Nov 2010 11:59:17 +0200

meego-keyboard (0.5.11-1) unstable; urgency=low

  * [UNRELEASED]  
  * Fixes: NB#199711 - COREWEB: /usr/bin/meego-im-uiserver 'MWidgetView::style MWidgetController::style style WidgetBar::styleChanged WidgetBar::WidgetBar'